syntax = "proto3";

package shortener.v1;

// Используем твой правильный вариант go_package
option go_package = "gen/go/shortener/v1;shortenerv1";

// *** ГЛАВНОЕ ИСПРАВЛЕНИЕ ЗДЕСЬ ***
// Убираем лишние префиксы из путей импорта
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Shortener {
  rpc CreateLink(CreateLinkRequest) returns (CreateLinkResponse);
  rpc GetLinkStats(GetLinkStatsRequest) returns (GetLinkStatsResponse);
  rpc DeleteLink(DeleteLinkRequest) returns (google.protobuf.Empty);
  rpc ListUserLinks(ListUserLinksRequest) returns (ListUserLinksResponse);
  rpc RecordClick(RecordClickRequest) returns (google.protobuf.Empty);
  rpc RedirectAndRecord(RedirectAndRecordRequest) returns (RedirectAndRecordResponse);
}

message CreateLinkRequest {
  string original_url = 1;
  int64 user_tg_id = 2;
  optional string title = 3;
  optional google.protobuf.Timestamp expires_at = 4;
  optional string custom_alias = 5;
}

message CreateLinkResponse {
  string alias = 1;
}

message GetLinkStatsRequest {
  string alias = 1;
}

message GetLinkStatsResponse {
  string original_url = 1;
  int64 click_count = 2;
  optional string title = 3;
  optional google.protobuf.Timestamp expires_at = 4;
  map<string, int64> clicks_by_device = 5;
}

message DeleteLinkRequest {
  string alias = 1;
}

message ListUserLinksRequest {
  int64 user_tg_id = 1;
}

message LinkInfo {
  string alias = 1;
  string original_url = 2;
  optional string title = 3;
}

message ListUserLinksResponse {
  repeated LinkInfo links = 1;
}

message RecordClickRequest {
  string alias = 1;
  string device_type = 2;
  optional string ip_address = 3;
  optional string user_agent = 4;
  optional string referer = 5;
  optional google.protobuf.Timestamp clicked_at = 6;
}

message RedirectAndRecordRequest {
  string alias = 1;
  optional string ip_address = 2;
  optional string user_agent = 3;
  optional string referer = 4;
  optional google.protobuf.Timestamp clicked_at = 5;
}

message RedirectAndRecordResponse {
  string original_url = 1;
  optional string title = 2;
  optional google.protobuf.Timestamp expires_at = 3;
}
